# frontend

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini
backend/: .dockerignore  .env  .flake8  .gitignore  Dockerfile  Dockerfile.aws  README.md  alembic.ini  callback.html  crud.py  database.py  docker-compose.aws.yaml  docker-compose.local.yaml  docker-compose.yaml  dummpy.py  index.html  init_db.py  main.py  makefile  makefile.aws  makefile.local  models.py  mypy.ini  naver_login.html  pyproject.toml  pytest.ini  requirements.txt  routers.py  schemas.py  test_main.py
backend/alembic/: env.py
backend/alembic/versions/: 0b0cae99e56f_user_change_role_type.py  41b71c93800d_include_user_foreignkey_on_stock_.py  7bca5133c11d_initial_migration.py  8b729b8205b3_includes_price_in_stock.py  9724f2949afa_include_foreignkey_on_stock_transactions.py  9ced55c60fcb_initial_model_setting.py  c0a42760a31a_add_stock_code_field_in_stock.py  d72e85efa4b3_sync_with_current_database_state.py  dffa8a62e108_initial_migration.py  e7ef1263c82d_change_stock_field_name_index_market_.py
backend/api/v1/auth/: README.md
backend/app/api/auth/: README.md
backend/app/common/: schema.py
backend/app/common/auth/: constant.py  constants.py  jwt.py  security.py
backend/app/common/mixin/: timestamp.py
backend/app/common/mixins/: timestamps.py
backend/app/common/repository/: base_repository.py
backend/app/common/schema/: common_schema.py
backend/app/common/util/: time.py
backend/app/data/common/: config.py  constant.py  enum.py  service.py
backend/app/data/initial/: create_table.py  insert_basic_data.py
backend/app/data/investing/: rich_portfolio.py
backend/app/database/: config.py  models.py  schemas.py
backend/app/dependencies/: database.py  dependencies.py
backend/app/router/: items.py  login_router.py  users.py
backend/app/script/: init_db.py
backend/app/service/: login_service.py
backend/auth/database/: config.py  models.py  schemas.py
backend/auth/router/: auth_router.py
backend/auth/service/: auth_service.py  config.py  google_service.py  kakao_service.py  naver_service.py
backend/data/: finance_reader.py  interface.py  korea_stock_current_price.py  korea_stock_realtime.py  oversea_stock_current_price.py  stock_batch.py  stock_realtime.py
backend/data/alpha_vantage/: stock_code.py
backend/data/common/: config.py  constant.py  enum.py  enums.py  repository.py  schemas.py  service.py
backend/data/initial/: create_table.py  insert_basic_data.py
backend/data/korea_investment/: stock_batch.py  stock_realtime.py
backend/data/nasdaq/: exchange_rate.py  stock_code.py
backend/data/naver/: stock_daily.py  stock_hourly.py
backend/data/sources/: auth.py  constant.py  enums.py  schemas.py  stock_info.py
backend/data/stock/: stock_code.py  stock_codes.py
backend/data/yahoo/: dividend.py  dividend_oversea.py  exchange_rate.py  stock_historical.py  stock_oversea.py  stock_overseas.py
backend/database/: config.py  constant.py  create_tables.py  dependencies.py  dependency.py  enum.py  enums.py  insert_basic_data.py  redis.py  singleton.py
backend/dependencies/: dependencies.py
backend/docker/: Dockerfile.app  Dockerfile.create_table  Dockerfile.dividend  Dockerfile.exchange_rate  Dockerfile.index  Dockerfile.index_all  Dockerfile.insert_basic_data  Dockerfile.market_index_historical  Dockerfile.market_index_historical_all  Dockerfile.realtime_index_korea  Dockerfile.realtime_index_world  Dockerfile.realtime_korea_market_index  Dockerfile.realtime_stock  Dockerfile.realtime_stock_korea  Dockerfile.realtime_stock_world  Dockerfile.realtime_world_market_index  Dockerfile.rich_portfolio  Dockerfile.stock  Dockerfile.stock_all  Dockerfile.stock_code  Dockerfile.stock_historical  Dockerfile.stock_historical_all  Dockerfile.tip  Dockerfile.usa_realtime_stock
backend/etc/cronjob/: initial.py  main.sh  setup.sh  stock_jobs.sh
backend/etc/file/: australia_stock_list.xlsx  brazil_stock_list.xlsx  canada_stock_list.xlsx  china_stock_list.xlsx  etf_stock_list.xlsx  eurozone_stock_list.xlsx  france_stock_list.xlsx  germany_stock_list.xlsx  hongkong_stock_list.xlsx  india_stock_list.xlsx  italy_stock_list.xlsx  japan_stock_list.xlsx  korea_stock_list.xlsx  market_indices.xlsx  nas_stock_list.xlsx  netherland_stock_list.xlsx  netherlands_stock_list.xlsx  nys_stock_list.xlsx  spain_stock_list.xlsx  switzerland_stock_list.xlsx  test_stock_list.xlsx  uk_stock_list.xlsx  usa_stock_list.xlsx
backend/etc/files/: japan_realtime_stock_list.xlsx  japan_stock_list.xlsx  korea_stock_list.xlsx  nas_realtime_stock_list.xlsx  nys_stock_list.xlsx  stock_list.xlsx  us_stock_list.xlsx
backend/etc/script/: initial.sh  setup_stock.sh  stock_cronjob.sh
backend/etc/scripts/: crontab.txt  exchange_rate.sh  index.sh  index_all.sh  initial.sh  main.sh  realtime_index_korea.sh  realtime_index_world.sh  realtime_stock.sh  realtime_stock_korea.sh  realtime_stock_world.sh  rich_portfolio.sh  setup_stocks.sh  start_dividend.sh  start_korea_realtime_stock.sh  start_market_index_historical.sh  start_market_index_historical_all.sh  start_realtime_korea_market_index.sh  start_realtime_world_market_index.sh  start_stock_historical.sh  start_tip.sh  start_usa_realtime_stock.sh  start_world_realtime_stock.sh  stock.sh  stock_jobs.sh  stop_korea_realtime_stock.sh  stop_usa_realtime_stock.sh  tip.sh
backend/etc/services/: stock_realtime.service
backend/test/: conftest.py
(+883 files in other folders)
